manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-semaphore
  labels:
    app: k8s-semaphore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-semaphore
  template:
    metadata:
      labels:
        app: k8s-semaphore
    spec:
      volumes:
      - name: certs
        secret:
          secretName: k8s-semaphore-certs 
      containers:
      - name: k8s-semaphore
        image: quay.io/pbertera/k8s-semaphore
        volumeMounts:
        - name:  certs
          readOnly: true
          mountPath: /etc/certs
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-semaphore
spec:
  selector:
    app: k8s-semaphore
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "k8s-semaphore"
webhooks:
- name: "k8s-semaphore.k8s-semaphore.svc"
  rules:
  - apiGroups:   [""]
    apiVersions: ["v1"]
    operations:  ["DELETE"]
    resources:   ["pods"]
    scope:       "Namespaced"
  clientConfig:
    service:
      namespace: "k8s-semaphore"
      name: "k8s-semaphore"
      path: "/validate"
      port: 8080
    caBundle: "Y2hhbmdlbWUK" # just a dumy base64 content
  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  timeoutSeconds: 5
